crates/au-cli/tests/it/snapshots/it__scenarios__enum-element-bad-regex.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "shape-syntax-error",
      "message": "field 'level': enum literal '1abc' violates the type-name regex",
      "related": [
        {
          "file": "<root>/scenarios/enum-element-bad-regex/type/rating.type.yaml",
          "line_col": {
            "end": {
              "col": 22,
              "line": 4
            },
            "start": {
              "col": 10,
              "line": 4
            }
          },
          "range": {
            "end": 151,
            "start": 139
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/enum-element-bad-regex/use-it.md",
        "line_col": {
          "end": {
            "col": 12,
            "line": 3
          },
          "start": {
            "col": 8,
            "line": 3
          }
        },
        "range": {
          "end": 28,
          "start": 24
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 28,
                        "line_col": {
                          "end": {
                            "col": 29,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/enum-element-bad-regex/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "enum-element-bad-regex"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "enum-element-bad-regex"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/enum-element-bad-regex/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 56,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 34
            },
            "text": "Use the broken type"
          },
          {
            "content": "rating",
            "kind": "inline_code",
            "span": {
              "end": 65,
              "line_col": {
                "end": {
                  "col": 9,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 57
            }
          },
          {
            "content": "level",
            "kind": "inline_code",
            "span": {
              "end": 75,
              "line_col": {
                "end": {
                  "col": 19,
                  "line": 8
                },
                "start": {
                  "col": 12,
                  "line": 8
                }
              },
              "start": 68
            }
          },
          {
            "content": "1abc",
            "kind": "inline_code",
            "span": {
              "end": 116,
              "line_col": {
                "end": {
                  "col": 60,
                  "line": 8
                },
                "start": {
                  "col": 54,
                  "line": 8
                }
              },
              "start": 110
            }
          }
        ],
        "claim": [
          "rating"
        ],
        "closure": [
          "rating"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "level",
            "origins": [
              {
                "name": "rating",
                "origin_path": "<root>/scenarios/enum-element-bad-regex/type/rating.type.yaml",
                "required": true,
                "shape": "[1abc, high]"
              }
            ],
            "required": true,
            "shape": "[1abc, high]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 28,
                        "line_col": {
                          "end": {
                            "col": 12,
                            "line": 3
                          },
                          "start": {
                            "col": 8,
                            "line": 3
                          }
                        },
                        "start": 24
                      },
                      "file": "<root>/scenarios/enum-element-bad-regex/use-it.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "high"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "high"
                }
              }
            ],
            "field": "level"
          }
        ],
        "file": "<root>/scenarios/enum-element-bad-regex/use-it.md",
        "section_presence": null
      }
    ]
  }
}
